# plonky2-ecdsa

./: Cargo.toml  flake.nix
src/curve/: curve_msm.rs  curve_multiplication.rs  curve_summation.rs  curve_types.rs
src/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  glv.rs  nonnative.rs  split_nonnative.rs
