[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.13.0", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2 = { version = "0.2.2" }
plonky2_u32 = { git = "https://github.com/cfcosta/plonky2-u32" }
rayon = "1.10.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }

[features]
defeault = ["parallel"]
parallel = ["plonky2/parallel"]
